--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lychak.androidapp1"
+    package="com.lychak.sendingmessageapp"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0.1" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.lychak.androidapp1.MainActivity"
+            android:name="com.lychak.sendingmessageapp.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,17 +23,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.lychak.androidapp1.DisplayMessageActivity"
+            android:name="com.lychak.sendingmessageapp.DisplayMessageActivity"
             android:label="@string/title_activity_display_message"
-            android:parentActivityName="com.lychak.androidapp1.MainActivity" >
+            android:parentActivityName="com.lychak.sendingmessageapp.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.lychak.androidapp1.MainActivity" />
         </activity>
         <activity
-            android:name="com.lychak.androidapp1.FrameLayoutActivity"
+            android:name="com.lychak.sendingmessageapp.FrameLayoutActivity"
             android:label="@string/title_activity_frame_layout"
-            android:parentActivityName="com.lychak.androidapp1.MainActivity" >
+            android:parentActivityName="com.lychak.sendingmessageapp.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.lychak.androidapp1.MainActivity" />
